name:                adventofcode2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode2020#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable adventofcode2020
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -O0 -fno-warn-type-defaults -Wno-missing-signatures
                       -fno-warn-name-shadowing
  other-modules:       Day1
                      , Day2
                      , Day3
                      , Day4
                      , Day5
                      , Day6
                      , Day7
                      , Day8
                      , Day9
                      , Day10
                      , Day11
                      , Day12
                      , Day13
                      , Day14
                      , Day15
                      , Common
                      , Convertible
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , criterion
                      , bytestring
                      , containers
                      , unordered-containers
                      , vector
                      , regex-pcre-builtin
                      , split
                      , parsec
                      , hex
                      , transformers
                      , either
                      , matrix
                      , primes
                      , text
                      , pointedlist
                      , MissingH
                      , extra
                      , hspec
                      , mtl
                      , array
                      , arithmoi
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , NamedFieldPuns
                     , OverloadedStrings
                     , TemplateHaskell
                     , TypeOperators
                     , RecordWildCards
                     , LambdaCase
                     , FlexibleContexts
                     , ViewPatterns
                     , MultiParamTypeClasses
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , DuplicateRecordFields
                     , TupleSections
